manifests/argocd/gateway-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: flask-api-https
    hostname: "api.henrique.local"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: flask-api-tls
        namespace: flask-api
    allowedRoutes:
      namespaces:
        from: All
  - name: argocd-https
    hostname: "argocd.henrique.local"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: argocd-tls
        namespace: argocd
    allowedRoutes:
      namespaces:
        from: All
  - name: grafana-https
    hostname: "grafana.henrique.local"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
        namespace: monitoring
    allowedRoutes:
      namespaces:
        from: All
