manifests/argocd/flask_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flask-api-route
  namespace: flask-api
spec:
  parentRefs:
  - name: main-gateway
    namespace: gateway-system
    sectionName: flask-api-https
  hostnames:
  - "api.henrique.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: flask-api-service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-secret
  namespace: flask-api
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateway-system
  to:
  - group: ""
    kind: Secret
    name: flask-api-tls
