manifests/argocd/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    konghq.com/strip-path: "false"
    
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - grafana.henrique.local
    secretName: grafana-tls
  rules:
  - host: grafana.henrique.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
