manifests/argocd/http_redirect_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway-system
spec:
  parentRefs:
  - name: main-gateway
    sectionName: http
  hostnames:
  - "*.henrique.local"
  - "henrique.local"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
