manifests/argocd/jenkins.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins
spec:
  parentRefs:
  - name: main-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "jenkins.henrique.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins
      port: 8080
