manifests/argocd/sonarqube_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-route
  namespace: sonarqube
spec:
  parentRefs:
  - name: main-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "sonar.henrique.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarqube-sonarqube
      port: 9000
